1999-09-23  MORIOKA Tomohiko  <tomo@m17n.org>

	* mcs-20.el (mime-charset-coding-system-alist): Use coding-system
	`tis-620' instead of `tis620'.

	* mcs-xm.el (charsets-mime-charset-alist): Add setting for
	`tis-620'.

1999-09-22  MORIOKA Tomohiko  <tomo@m17n.org>

	* mcs-20.el (mime-charset-coding-system-alist): Add `cp874'.

1999-09-21  Katsumi Yamaoka   <yamaoka@jpl.org>

	* EMU-ELS (pces-modules): Add `pces-xfc' if the feature `mule' is
	provided even though the feature `file-coding' is not provided.

	* pces.el: Require `pces-xfc' if the feature `mule' is provided
	even though the feature `file-coding' is not provided.


1999-09-13  MORIOKA Tomohiko  <tomo@m17n.org>

	* APEL: Version 9.22 released.

1999-09-12  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* poe.el (defmacro-maybe-cond): Add edebug spec.

1999-09-12  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* poe.el (defun-maybe-cond): Add edebug spec.

1999-09-09  MORIOKA Tomohiko  <tomo@m17n.org>

	* mcs-xm.el (mime-charset-decoder-alist): Don't use
	`decode-mime-charset-region-with-iso646-unification' if running
	XEmacs-UTF-2000.
	(mime-iso646-character-unification-alist): Don't define if running
	XEmacs-UTF-2000.
	(mime-unified-character-face): Likewise.
	(mime-character-unification-limit-size): Likewise.
	(decode-mime-charset-region-with-iso646-unification): Likewise.

1999-09-09  Katsumi Yamaoka   <yamaoka@jpl.org>

	* tinycustom.el (defface): Allow `type' in SPEC; enrich doc string.

1999-09-08  Katsumi Yamaoka   <yamaoka@jpl.org>

	* tinycustom.el (frame-background-mode): New variable.

	* poe.el (frame-background-mode): Move to tinycustom.el.

1999-09-03  Katsumi Yamaoka   <yamaoka@jpl.org>

	* tinycustom.el (defface): Set the face attributes according to
	SPEC.

	* poe.el (frame-background-mode): New variable.

1999-09-02  MORIOKA Tomohiko  <tomo@m17n.org>

	* poe.el: Delete autoload setting for `filename'.
	(convert-standard-filename): Require `filename'.
